# server-administration-bot

./: .gitignore  .gitlab-ci.yml  COMMAND_TEMPLATE.yml  Makefile  Pipfile  README.md  TODO.md  pyproject.toml  setup.py
sysadmin_telebot/: COMMAND_TEMPLATE.yml  __version__.py  arguments.py  file_utils.py  log_utils.py  main.py  process_utils.py  telegram_utils.py  thread_utils.py
sysadmin_telebot/examples/: my_config.yml
